--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.Factyfodd_home"
         tools:targetApi="31">
         <activity
+            android:name=".news"
+            android:exported="false"
+            android:label="@string/title_activity_news"
+            android:theme="@style/Theme.Factyfodd_home">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".profile"
+            android:exported="false" />
+        <activity
             android:name=".reset_password"
             android:exported="false" />
         <activity
