--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Factyfodd_home"
         tools:targetApi="31">
         <activity
+            android:name=".trendingtres"
+            android:exported="false" />
+        <activity
+            android:name=".trendingdos"
+            android:exported="false" />
+        <activity
             android:name=".trendinguno"
             android:exported="false" />
         <activity
