--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Factyfodd_home"
         tools:targetApi="31">
         <activity
+            android:name=".trendingseis"
+            android:exported="false" />
+        <activity
+            android:name=".trendingcinco"
+            android:exported="false" />
+        <activity
+            android:name=".trendingcuatro"
+            android:exported="false" />
+        <activity
             android:name=".trendingtres"
             android:exported="false" />
         <activity
